# QuantLib

./: .gitignore  draft_audit_findings.md  draft_paper.md  draft_results_analysis.md  future_work.md  plan.md  plot_rlcr_walkthrough.py  program.md
results/: .gitignore  CMakeLists.txt  generate_data.cpp  plot_figures.py  quantum_physics_bs_report.md  quantum_physics_bs_report_body.tex  reproduce.sh  results_analysis.md
results/data/: .artifact_hashes  barrier_low_vol_ExponentialFitting.csv  barrier_low_vol_MilevTaglianiCN.csv  barrier_low_vol_StandardCentral.csv  barrier_moderate_vol_ExponentialFitting.csv  barrier_moderate_vol_MilevTaglianiCN.csv  barrier_moderate_vol_StandardCentral.csv  barrier_moderate_vol_reference_ExponentialFitting.csv  barrier_moderate_vol_reference_MilevTaglianiCN.csv  barrier_moderate_vol_reference_StandardCentral.csv  benchmark_ExponentialFitting.csv  benchmark_MilevTaglianiCN.csv  benchmark_StandardCentral.csv  effective_diffusion_ExponentialFitting.csv  effective_diffusion_MilevTaglianiCN.csv  effective_diffusion_StandardCentral.csv  effective_diffusion_sweep_ExponentialFitting.csv  effective_diffusion_sweep_MilevTaglianiCN.csv  effective_diffusion_sweep_StandardCentral.csv  grid_convergence_ExponentialFitting.csv  grid_convergence_MilevTaglianiCN.csv  grid_convergence_StandardCentral.csv  mc_barrier_low_vol.csv  mc_barrier_moderate_vol.csv  mmatrix_offdiag_ExponentialFitting.csv  mmatrix_offdiag_MilevTaglianiCN.csv  mmatrix_offdiag_StandardCentral.csv  mmatrix_sweep_ExponentialFitting.csv  mmatrix_sweep_MilevTaglianiCN.csv  xcothx.csv  (+5 more)
(+39 files in other folders)
